# basebuilder

./: Cargo.toml  flake.nix
.github/workflows/: deploy-to-pages.yml
assets/: base.materials.ron  base.terrain_settings.ron
src/: ai_controller.rs  app_state.rs  basebuilder.rs  build.rs  building_material.rs  chop_tree.rs  climbable.rs  crafting.rs  creep.rs  cursor_position.rs  debug.rs  deliver.rs  designation_layer.rs  dig.rs  dude.rs  dwarf.rs  gravity.rs  gun.rs  haul.rs  health.rs  hit.rs  hovered_tile.rs  inventory.rs  item.rs  items.rs  job.rs  ladder.rs  load.rs  main.rs  main_camera.rs  main_state.rs  material.rs  movement.rs  pan_zoom_camera2d.rs  pathfinding.rs  pickup.rs  player.rs  player_controller.rs  resource.rs  shoot.rs  (+7 more)
src/actions/: action.rs  action_area.rs  deliver.rs  dig.rs  do_dig_job.rs  do_fell_job.rs  fell.rs  meander.rs  mod.rs  move_to.rs  pickup.rs  work.rs
src/debug/: mod.rs  pathfinding.rs  terrain.rs
src/labor/: build.rs  build_structure.rs  chop_tree.rs  commute.rs  deliver.rs  dig.rs  dig_tile.rs  haul.rs  job.rs  mod.rs  pickup.rs  stuck.rs
src/terrain/: generate.rs  mod.rs  terrain_params.rs
src/ui/: character_ui.rs  drag_and_drop.rs  mod.rs
terrain_gen/: Cargo.toml
terrain_gen/src/: lib.rs
web/: index.html
