[package]
name = "basebuilder"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[features]
inspector = ["dep:bevy-inspector-egui"]

[profile.small-release]
inherits = "release"
lto = "fat"
opt-level = "z"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["wayland"] }
bevy-inspector-egui = { version = "0.18.0", optional = true }
ndarray = "0.15.6"
bevy_ecs_tilemap = "0.9.0"
bevy_rapier2d = { version = "0.21.0", features = ["wasm-bindgen"] }
bevy_common_assets = { version = "0.5.0", features = ["ron"] }
serde = "1.0.155"

[patch.crates-io]
bevy_ecs_tilemap = { git = 'https://github.com/geieredgar/bevy_ecs_tilemap', branch = "bevy_track" }
bevy-inspector-egui = { git = 'https://github.com/jakobhellermann/bevy-inspector-egui' }
