[package]
name = "basebuilder"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[features]
inspector = ["dep:bevy-inspector-egui"]
async = ["dep:futures-lite"]

[profile.small-release]
inherits = "release"
lto = "fat"
opt-level = "z"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = { version = "0.18.0", optional = true, default-features = false }
ndarray = "0.15.6"
bevy_ecs_tilemap = "0.10.0"
bevy_rapier2d = { version = "0.21.0", features = ["wasm-bindgen"] }
bevy_common_assets = { version = "0.5.0", features = ["ron"] }
serde = "1.0.155"
noise = "0.8.2"
rand = "0.8.5"
fast_poisson = "0.5.2"
ahash = "0.8.3"
rand_xoshiro = "0.6.0"
futures-lite = { version = "1.12.0", optional = true }
egui = "0.21.0"
bevy_egui = "0.20.3"
tracing = "0.1.37"
pathfinding = "4.2.1"

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "filesystem_watcher",
    "png",
]

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_ecs_tilemap = { version = "0.10.0", features = ["atlas"] }

[target.'cfg(unix)'.dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "filesystem_watcher",
    "png",
    "x11",
    "wayland",
    "trace_tracy",
]

[patch.crates-io]
# bevy_ecs_tilemap = { git = 'https://github.com/StarArawn/bevy_ecs_tilemap', branch = "main" }
bevy-inspector-egui = { git = 'https://github.com/jakobhellermann/bevy-inspector-egui' }
